--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document UNDO Undo</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
+    <style>
+    .carousel-inner {
+        height: 600px;
+        }
+    </style>
+    </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-primary fixed-top">
         <a class="navbar-brand" href="#">Navbar</a>
